Fix/299 collapsed tab (#234)
* fix: make accordion default open

* fix: login popup works with google

* fix: path title visibility

* fix: spinner doesn't appear on follow/unfollow click

* fix: path redirection

--- a/frontend/src/components/PathCard/styles.module.sass
+++ b/frontend/src/components/PathCard/styles.module.sass
@@ -34,7 +34,9 @@
   font-size: 1.5em
   color: #fff
   grid-area: 1 / 2 / span 1 / span 1
+  height: 100%
   overflow: hidden
+  white-space: nowrap
   text-overflow: ellipsis
   display: -webkit-box
   //noinspection CssUnknownProperty https://caniuse.com/#search=line-clamp
